# tap-csv-folder

./: .pre-commit-config.yaml  README.md  meltano.yml  plugin.yml  pyproject.toml  tox.ini
.github/workflows/: build.yml  test.yml
tap_csv_folder/: client.py  tap.py
tap_csvfolder/: __main__.py  tap.py
tests/: __init__.py  test_core.py
