[project]
name = "tap-csv-folder"
dynamic = ["version"]
description = "Singer tap for CSVFolder, built with the Meltano Singer SDK."
authors = [{ name = "Edgar Ramírez-Mondragón", email = "edgar@arch.dev" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ELT",
    "CSVFolder",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "singer-sdk[s3, ssh]~=0.53.2",
]

[dependency-groups]
dev = [
    { include-group = "testing" },
    { include-group = "typing" },
]
testing = [
    "pytest>=8",
]
typing = [
    { include-group = "testing" },
    "mypy>=1.18.2",
    "ty>=0.0.1a23",
]

[project.scripts]
tap-csv-folder = "tap_csv_folder.tap:TapCSVFolder.cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
fallback-version = "0.0.0"
source = "vcs"

[tool.pytest.ini_options]
addopts = '--durations=10'

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"
